# rust-demo

./: .gitignore  Cargo.toml  README.md  build.rs
calling_bad_Clibraries/: Cargo.toml  README.md  build.rs  do.sh
calling_bad_Clibraries/bad_c_libs/: build.sh  mid_exit.c  mid_exit.h  test1.cpp
calling_bad_Clibraries/src/: main.rs
derive_attribute_macros/: README.md
derive_attribute_macros/my_lib/: Cargo.toml
derive_attribute_macros/my_lib/src/: lib.rs  main.rs
derive_attribute_macros/my_lib/src/my_module1/: mod.rs  sub_module1.rs
derive_attribute_macros/my_macros/: Cargo.toml
derive_attribute_macros/my_macros/src/: lib.rs  main.rs
derive_attribute_macros/my_macros/src/my_module2/: mod.rs  sub_module2.rs
nested_lambdas/: Cargo.toml  README.md
nested_lambdas/src/: main.rs
nested_lamdas/: Cargo.toml
nested_lamdas/src/: main.rs
