[package]
name = "calling_bad_Clibraries"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.69.4"

# tell bindgen where to link against (assuming 'build.sh' in the bad_c_libs directory generated there):
[build]
rustflags = ["-L", "./bad_clibs"]

[dependencies]
bindgen = { version = "0.69.4", features = [] }
