[package]
name = "my_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_lib"
path = "src/lib.rs"
proc-macro = false      # unnecessary, but want to explicitly inidate here the intentions
# define output to be static and cdylib
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "my_bin"
path = "src/main.rs"
required-features = []

[dependencies]
my_macros = { path = "../my_macros" }

